# maestro

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/: index.html
docs/: api.md  index.md  models.md  tasks.md
models/: index.html
search/: search_index.json
src/maestro/: __init__.py  hello.py
src/maestro/datasets/: __init__.py  countdown.py  gsm8k.py
src/maestro/models/: __init__.py  base.py  registry.py  transformers.py
src/maestro/tasks/: __init__.py  base.py  countdown.py  registry.py
tasks/: index.html
tests/: test_countdown.py  test_datasets.py  test_import.py
