[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestro"
dynamic = ["version"]
description = "A minimal post-training library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rsikand29", email = "rsikand29@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/rsikand29/maestro"

[tool.hatch.version]
path = "src/maestro/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/maestro"]
