[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestro"
dynamic = ["version"]
description = "A minimal post-training library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rosikand", email = "rsikand29@gmail.com" }]
dependencies = ["datasets", "torch", "transformers"]

[project.optional-dependencies]
dev = ["pytest"]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[project.urls]
Homepage = "https://github.com/rosikand/maestro"

[tool.hatch.version]
path = "src/maestro/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/maestro"]
